[package]
name = "usbip-device"
version = "0.1.1"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "An implementation of usb-device on top of USBIP device."

[dependencies]
usb-device = { version = "0.2.7", default-features = false }
log = { version = "0.4.14", default-features = false }
bitflags = { version = "1.2.1", default-features = false }

[dev-dependencies]
pretty_env_logger = { version = "0.4.0", default-features = false }
usbd-serial = { version = "0.1.1", default-features = false }
usbd-hid = { version = "0.5.0", default-features = false }