[package]
name = "usbip-device"
version = "0.1.5"
authors = ["Leon Tan <leon.arian.tan@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["no-std", "embedded", "usb", "usbip"]
license = "Apache-2.0 OR MIT"
description = "An implementation of usb-device on top of USBIP device."
repository = "https://github.com/Sawchord/usbip-device"

[dependencies]
usb-device = { version = "0.2.9", default-features = false }
log = { version = "0.4.17", default-features = false }
bitflags = { version = "1.3.2", default-features = false }

[dev-dependencies]
pretty_env_logger = { version = "0.4.0", default-features = false }
usbd-serial = { version = "0.1.1", default-features = false }
usbd-hid = { version = "0.6.0", default-features = false }